# ngp_baseline_nv

./: .gitignore  CMakeLists.txt  Log.md  README.md  ROADMAP.md  ROADMAP_RETIRE_MINIMAL.md  RoadmapNEW.md  Roadmap_IMPL.md  main.cu  vcpkg.json
cmake/: setup_vcpkg.cmake
include/neural-graphics-primitives/: camera_path.h  common.h  json_binding.h  marching_cubes.h  nerf_loader.h  render_buffer.h  testbed.h
ngp-minimal/: CMakeLists.txt  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_STATUS.md  README.md  main_minimal.cu  test_data_loading.bat  test_phase4.bat
ngp-minimal/include/ngp-minimal/: common.h  common_device.cuh  gpu_memory.h  nerf_device.cuh  nerf_loader.h  nerf_network.h  testbed.h
ngp-minimal/src/: main.cu  nerf_loader.cu  nerf_network.cu  testbed.cu  testbed_nerf.cu
src/: camera_path.cu  common_host.cu  marching_cubes.cu  nerf_loader.cu  render_buffer.cu  testbed.cu  testbed_nerf.cu
